--- a/gitrepos/elemental-volcano-cluster.yaml
+++ b/gitrepos/elemental-volcano-cluster.yaml
@@ -1,12 +1,12 @@
 apiVersion: fleet.cattle.io/v1alpha1
 kind: GitRepo
 metadata:
-  name: elemental-registration
+  name: elemental-volcano-cluster
   namespace: fleet-local
 spec:
   branch: main
   paths:
-    - /manifests/clusters/volcano
+    - /manifests/clusters/volcano/cluster
   repo: https://github.com/zombiefish/elemental-resources
   targets:
     - clusterSelector:
