--- a/gitrepos/elemental-channels.yaml
+++ b/gitrepos/elemental-channels.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   branch: main
   paths:
-    - /manifests/registration/
+    - /manifests/channels/
   repo: https://github.com/zombiefish/elemental-resources
   targets:
     - clusterSelector:
