--- a/manifests/clusters/volcano/cluster/volcano-cluster.yaml
+++ b/manifests/clusters/volcano/cluster/volcano-cluster.yaml
@@ -5,7 +5,8 @@ metadata:
   name: volcano
   namespace: fleet-default
 spec:
-  kubernetesVersion: v1.29.14+rke2r1
+  # kubernetesVersion: v1.29.14+rke2r1
+  kubernetesVersion: v1.30.1+rke2r1
   rkeConfig:
     etcd:
       snapshotRetention: 5
